Fixes alignment of top menu and search in different breakpoints
After combining search dropdown and search box into a single wrapper div,
I worked on aligning all elements in header so they transition properly
from breakpointn to breakpoint as the device or browser size changes.

mario h.
node/59858

--- a/sites/all/themes/slac/css/pages.css
+++ b/sites/all/themes/slac/css/pages.css
@@ -423,13 +423,6 @@ a:hover, a:active {
   display: none;
 }
 
-.region-header {
-  float: right;
-}
-.region-header .block {
-  float: left;
-}
-
 .front #page-title {
   display: none;
 }
